--- a/src/components/Section_3/styles.scss
+++ b/src/components/Section_3/styles.scss
@@ -283,3 +283,47 @@
 		}
 	}
 }
+
+.hover-6 {
+	&-content {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+
+		width: 100%;
+		height: 100%;
+
+		position: absolute;
+		bottom: 0;
+
+		text-align: center;
+		opacity: 0;
+
+		color: #fff;
+		text-align: center;
+
+		background: fade-out(#000, 0.1);
+		transition: opacity 0.25s ease;
+		-webkit-transition: opacity 0.25s ease;
+		-moz-transition: opacity 0.25s ease;
+		-ms-transition: opacity 0.25s ease;
+		-o-transition: opacity 0.25s ease;
+	}
+
+	&-description {
+		font-size: 0.85rem;
+		font-weight: 600;
+		text-transform: uppercase;
+	}
+
+	&-title {
+		font-size: 1.2rem;
+	}
+
+	&:hover {
+		.hover-6-content {
+			opacity: 1;
+		}
+	}
+}
